container to flex to fix alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid black;
-}
+} */
 
 :root {
     --ecru: #D1BC91;
@@ -16,7 +16,8 @@ body {
 }
 
 .container {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-areas:
     "header header header"
     "main-content main-content main-content"
@@ -88,7 +89,7 @@ button {
 .cards {
     display: grid;
     grid-template-rows: min-content 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(7, 1fr);
     gap: 12px;
     height: fit-content;
 }
